--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install",
+    "lint": "next lint",
+    "test": "echo No tests found.",
+    "pre-commit": "npm run lint"
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.3.0",
@@ -14,8 +18,15 @@
     "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.0.3",
     "autoprefixer": "^10.2.6",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^12.0.3",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
     "postcss": "^8.3.5",
+    "prettier": "^2.4.1",
     "tailwindcss": "^2.2.4"
   }
 }
