--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/typography": "^0.4.1",
     "next": "latest",
+    "next-auth": "^4.0.0-beta.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tailwindcss-textshadow": "^2.1.3"
