--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next-auth": "^4.0.0-beta.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.19.1",
+    "react-icons": "^4.3.1",
     "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
