--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.1",
     "react-icons": "^4.3.1",
-    "tailwindcss-textshadow": "^2.1.3"
+    "tailwindcss-textshadow": "^2.1.3",
+    "zustand": "^3.6.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.3",
