--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lint-staged": "^11.2.6",
     "postcss": "^8.3.5",
     "prettier": "^2.4.1",
+    "prisma": "^3.4.1",
     "tailwindcss": "^2.2.4"
   }
 }
