--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.1",
     "react-icons": "^4.3.1",
+    "swr": "^1.0.1",
     "tailwindcss-textshadow": "^2.1.3",
     "zustand": "^3.6.4"
   },
