--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.1",
     "react-icons": "^4.3.1",
+    "superjson": "^1.8.0",
     "swr": "^1.0.1",
     "tailwindcss-textshadow": "^2.1.3",
     "zustand": "^3.6.4"
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.3",
     "autoprefixer": "^10.2.6",
+    "babel-plugin-superjson-next": "^0.4.2",
     "eslint": "^7.32.0",
     "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
