--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
+    "install": "^0.13.0",
     "lint-staged": "^11.2.6",
+    "npm": "^8.1.3",
     "postcss": "^8.3.5",
     "prettier": "^2.4.1",
     "prisma": "^3.4.1",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^2.2.4",
+    "tailwindcss-debug-screens": "^2.2.0"
   }
 }
