--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint": "^7.32.0",
     "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "install": "^0.13.0",
     "lint-staged": "^11.2.6",
